plugins {
    id 'org.springframework.boot' version '2.1.8.RELEASE'
    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
    id 'java'
}

group = 'com.ping'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

repositories {
    maven{url 'http://maven.aliyun.com/nexus/content/groups/public'}
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'junit:junit:4.12'
    implementation 'org.springframework.boot:spring-boot-starter-freemarker'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'com.baomidou:mybatis-plus:3.2.0'
    implementation 'com.baomidou:mybatis-plus-boot-starter:3.2.0'
    implementation 'com.baomidou:mybatis-plus-generator:3.2.0'
    implementation 'com.baomidou:mybatis-plus-dts:3.2.0'
//    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.0'
    implementation 'mysql:mysql-connector-java:8.0.11'
    implementation 'com.google.zxing:core:3.3.0'
    implementation 'com.google.zxing:javase:3.0.0'
    implementation 'com.alibaba:fastjson:1.2.60'
    implementation 'org.apache.httpcomponents:httpclient:4.3.2'
    implementation 'org.apache.httpcomponents:httpmime:4.5.3'
    implementation 'commons-lang:commons-lang:2.4'
    implementation 'commons-beanutils:commons-beanutils:1.9.4'
    implementation 'io.springfox:springfox-swagger-ui:2.9.2'
    implementation 'io.springfox:springfox-swagger2:2.9.2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}
